trying to reproduce bug on SO http://stackoverflow.com/questions/41254582/overriding-css-on-github-pages-using-slate-theme/41261599

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,14 +1,5 @@
 ---
 ---
-@charset "utf-8";
-
-$background-color: red;
-
-// Import partials from the `minima` theme.
 @import "{{ site.theme }}";
 
-/**
-
-// theme {{ site.theme }}
-
-**/
+body { background: red }
